K8s/cloudconfig/services-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: jeremydecuypere
spec:
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: jeremydecuypere
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: jeremydecuypere
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
